--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Your Name
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/EdwardDo69/edwarddo69.github.io/blob/bd81af4ae7e07d0c2cb0edfd9a668547b46ef05e/images/5x5.JPG
+avatar: https://github.com/EdwardDo69/edwarddo69.github.io/blob/bd81af4ae7e07d0c2cb0edfd9a668547b46ef05e/images/5x5.JPG?raw=true
 
 #
 # Flags below are optional
