--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Edward Do
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Domain Adaptation
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/EdwardDo69/edwarddo69.github.io/blob/bd81af4ae7e07d0c2cb0edfd9a668547b46ef05e/images/5x5.JPG?raw=true
