--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://github.com/EdwardDo69/edwarddo69.github.io/blob/bd81af4ae7e07d0c
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: dodinhphat98@gmail.com
   facebook: https://www.facebook.com/profile.php?id=100005906471590
   flickr:
   github: EdwardDo69
