--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://github.com/EdwardDo69/edwarddo69.github.io/blob/bd81af4ae7e07d0c
 footer-links:
   dribbble:
   email: dodinhphat98@gmail.com
-  facebook: https://www.facebook.com/profile.php?id=100005906471590
+  facebook: https://web.facebook.com/profile.php?id=100005906471590
   flickr:
   github: EdwardDo69
   instagram:
@@ -28,7 +28,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/@edwarddo929 # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
