--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://github.com/EdwardDo69/edwarddo69.github.io/blob/bd81af4ae7e07d0c
 footer-links:
   dribbble:
   email: dodinhphat98@gmail.com
-  facebook: https://web.facebook.com/profile.php?id=100005906471590
+  facebook: 100005906471590
   flickr:
   github: EdwardDo69
   instagram:
