--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Edward Do
 
 # Short bio or description (displayed in the header)
-description: AI research scientist
+description: AI Researcher
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/EdwardDo69/edwarddo69.github.io/blob/bd81af4ae7e07d0c2cb0edfd9a668547b46ef05e/images/5x5.JPG?raw=true
